2008-11-07  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c httpAdapter.c httpComm.c
		objectImplSwapI32toP32.c queryParser.y selectcond.c
		selectcond.c sfcbdumpP32onI32.c:
		Fixed [ 2168840 ] Fix various compiler warnings.
		(patch from J. Bart Whitely)

2008-11-05 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* configure.ac httpAdapter.c sfcBroker.c:
		Fixed [ 2226259 ] Make UDS Authentication optional

2008-11-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c:
		Fixed [ 2192053 ] _methProvider return value not checked propery
			(patch from Klaus Kämpf)

2008-11-03 Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* msgqueue.c msgqueue.h providerDrv.c providerMgr.c:
	Fixed [ 2192041 ] cleanup semaphore array access
	(with help from Klaus Kampf)

2008-11-03  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectImpl.c:
	Fixed [ 2210462 ] Memory Corruption in CMSetProperty()
	(patch by Mike Brasher)

	* brokerUpc.c:
	Fixed [ 2143287 ] Memory leak in getInstance up-call
	(found by J. Bart Whitely)
	
2008-11-03 Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* msgqueue.c:
	Fixed [ 2192058 ] Potential buffer overflow in
	msgqueue.c:localConnectServer
	(based on patch by Klaus Kampf)

2008-10-31 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* sfcBroker.c:
	Fixed [ 2189234 ] provProcMax can be too low
	(patch by Klaus Kampf)

2008-10-30 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* profileProvider.c:
	Fixed [ 2189206 ] duplicate call CMNewObjectPath to profileProvider.c
	(patch by Klaus Kampf)

	* trace.c:
	Fixed [ 2192073 ] Add thread information to trace output
	(patch by Klaus Kampf)
	
2008-10-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am configure.ac
		Fixed [ 2192030 ] adapt to autoconf 2.63, automake 1.10
			(patch from Klaus Kämpf)

2008-10-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerMgr.c providerDrv.c
		Fixed [ 2192049 ] Potential memory leak in providerDrv.c 